--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
                         <h1 class="s-intro__content-title">
                         I'm Riya Fathima <br>
                         a Mobile Developer <br>
-                        base in Somewhere.
                         </h1>                            
 
                         <div class="s-intro__content-btns">
@@ -170,15 +169,15 @@
                     <div class="grid-list-items s-about__blocks">
 
                         <div class="grid-list-items__item s-about__block">
-                            <h4 class="s-about__block-title">Experience</h4>
+                            <h4 class="s-about__block-title">Side business</h4>
                             <ul class="s-about__list">
                                 <li>
                                     Craft
-                                    <span>Product Designer</span>
+                                    <span>Making frames and Scrabook</span>
                                 </li>
                                 <li>
-                                    calligraphy
-                                    <span>writings</span>
+                                    Calligraphy
+                                    <span>Arabic and English</span>
                                 </li>
                                 <!--<li>
                                     Google
@@ -221,10 +220,20 @@
 
                             <ul class="s-about__list">
                                 <li>
-                                    Product Design
+                                    Drawing
+                                    <span>classic</span>
                                 </li>
                                 <li>
-                                    App Design
+                                    Painting
+                                    <span>landscape</span>
+                                </li>
+                                <li>
+                                    Singing
+                                    <span>hindi</span>
+                                </li>
+                                <li>
+                                    Coding
+                                    <span>flutter</span>
                                 </li>
                          <!--end s-about__block -->
 
@@ -244,7 +253,7 @@
             <div class="row">
                 <div class="column xl-12">
                     <div class="section-header" data-num="02">
-                        <h2 class="text-display-title">Selected Works.</h2>
+                        <h2 class="text-display-title">Things like to do.</h2>
                     </div> <!-- end section-header -->
                 </div>
             </div>
@@ -472,7 +481,8 @@
                     </div>
                     <h5>Projects Completed</h5>
                     <p>
-                    From brocamp i just completed 2 projects/task .
+                    From brocamp i just completed 2 projects/task.
+                        starbuck ,youtube, kopiko public website and plotfolio.
                     </p>
                 </div> <!-- end counter-items__item -->
 
